--- a/index.html
+++ b/index.html
@@ -6,73 +6,81 @@
 <title>Marathi Crime Files</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-/* Ticker animation */
+body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
+header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
+header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
+.header-buttons button{padding:6px 12px;margin-left:6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
+.header-buttons button:hover{transform:scale(1.05);}
+.notice-ticker,.headline-ticker{min-height:28px;overflow:hidden;white-space:nowrap;color:white;position:sticky;z-index:250;}
+.notice-ticker{background:#dc2626;padding:6px;top:56px;}
+.headline-ticker{background:#1e40af;padding:6px;top:88px;}
 .ticker-text{display:inline-block;padding-right:50px;animation:scroll 20s linear infinite;}
 @keyframes scroll{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
-.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:50;}
-.zoom-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:100;}
+.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:116px;}
+.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
+.card:hover{transform:scale(1.02);}
+.card img{width:100%;height:150px;object-fit:cover;cursor:zoom-in;transition:transform 0.3s;}
+.card-body{padding:8px;}
+.card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
+.card-body p{font-size:14px;color:#555;margin-bottom:6px;}
+.social-share{display:flex;gap:4px;margin-top:4px;}
+.social-share button{font-size:12px;padding:2px 4px;border-radius:4px;cursor:pointer;}
+.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;overflow:hidden;}
+.modal{background:#fff;border-radius:10px;max-width:650px;width:90%;max-height:85%;overflow-y:auto;padding:16px;position:relative;}
+.modal img{max-width:100%;border-radius:10px;margin-bottom:6px;}
+.modal-close{position:absolute;top:10px;right:15px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
+.editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
+.editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
+.editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
+.image-zoom:hover{transform:scale(1.05);}
+.zoom-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:9999;}
+.zoom-modal img{max-width:90%;max-height:90%;border-radius:10px;box-shadow:0 0 25px rgba(255,255,255,0.3);}
+.zoom-close{position:absolute;top:20px;right:30px;background:#fff;border:none;border-radius:50%;font-size:20px;padding:5px 10px;cursor:pointer;}
 </style>
 </head>
-<body class="bg-gray-100">
+<body>
 
-<header class="flex justify-between items-center p-4 bg-blue-800 text-white sticky top-0 z-30 shadow">
+<header>
   <div class="flex items-center">
-    <h1 class="text-xl font-bold">Marathi Crime Files</h1>
+    <img src="https://i.postimg.cc/vTb8F94w/vasalive-png.jpg" alt="Logo">
+    <h1 class="font-bold text-xl">Marathi Crime Files</h1>
   </div>
-  <div class="flex items-center gap-2">
-    <button id="loginBtn" class="bg-green-500 px-3 py-1 rounded">Login</button>
-    <button id="logoutBtn" class="hidden bg-red-600 px-3 py-1 rounded">Logout</button>
+  <div class="header-buttons">
+    <button id="loginBtn" class="bg-green-500 text-white">Login</button>
+    <button id="logoutBtn" class="hidden bg-red-600 text-white">Logout</button>
   </div>
 </header>
 
-<div class="notice-ticker bg-red-600 text-white p-2 sticky top-16 z-20 overflow-hidden">
-  <span class="ticker-text" id="noticeText"></span>
-</div>
-<div class="headline-ticker bg-blue-800 text-white p-2 sticky top-20 z-20 overflow-hidden">
-  <span class="ticker-text" id="headlineText"></span>
-</div>
+<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
+<div class="headline-ticker"><span class="ticker-text" id="headlineText"></span></div>
 
-<!-- Admin Notice Editor -->
-<section id="noticeEditor" class="editor hidden p-4 m-2 bg-white rounded shadow">
-  <h2 class="font-bold mb-2">📰 Admin Notice</h2>
-  <input id="noticeInput" placeholder="Enter notice text..." class="border p-2 w-full mb-2 rounded">
-  <button id="saveNoticeBtn" class="bg-blue-600 text-white px-3 py-1 rounded">Save</button>
+<section id="editorArea" class="editor hidden">
+  <h2>🖋️ Admin: Create News</h2>
+  <input id="aTitle" placeholder="Title">
+  <div id="blocksList"></div>
+  <button id="addTextBtn">Add Text</button>
+  <button id="addImageBtn">Add Image (Max 5)</button>
+  <button id="publishBtn">Publish</button>
 </section>
 
-<!-- Admin News Editor -->
-<section id="adminPanel" class="editor hidden p-4 m-2 bg-white rounded shadow">
-  <h2 class="font-bold mb-2">🖋️ Admin: Create News</h2>
-  <input id="title" placeholder="Title" class="border p-2 w-full mb-2 rounded">
-  <input id="shortDesc" placeholder="Short Description" class="border p-2 w-full mb-2 rounded">
-  <div id="blocksList" class="mb-2"></div>
-  <div class="flex gap-2 mb-2">
-    <button id="addTextBtn" class="bg-gray-300 px-3 py-1 rounded">Add Text</button>
-    <button id="addImageBtn" class="bg-gray-300 px-3 py-1 rounded">Add Image (Max 5)</button>
-    <button id="publishBtn" class="bg-blue-600 text-white px-3 py-1 rounded">Publish</button>
-  </div>
-</section>
+<section class="posts-grid" id="postsArea"></section>
 
-<!-- Posts Grid -->
-<section class="posts-grid grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4" id="postsArea"></section>
-
-<!-- Modal -->
-<div id="modalBg" class="modal-bg flex">
-  <div class="bg-white rounded p-4 max-w-xl w-full max-h-[80vh] overflow-y-auto relative">
-    <button id="modalClose" class="absolute top-2 right-2 bg-gray-200 px-2 py-1 rounded">X</button>
+<div id="modalBg" class="modal-bg">
+  <div class="modal">
+    <button id="modalClose" class="modal-close">X</button>
     <div id="modalContent"></div>
   </div>
 </div>
 
-<!-- Zoom Modal -->
-<div id="zoomModal" class="zoom-modal flex">
-  <img id="zoomImg" class="rounded shadow-lg">
-  <button class="zoom-close absolute top-4 right-4 bg-white px-2 py-1 rounded text-black font-bold">X</button>
+<div id="zoomModal" class="zoom-modal">
+  <img id="zoomImg" src="">
+  <button class="zoom-close">X</button>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, doc, setDoc, updateDoc, deleteDoc, onSnapshot, query, orderBy, getDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc, doc, setDoc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 // ===== Firebase Config =====
 const firebaseConfig = {
@@ -84,135 +92,105 @@ const firebaseConfig = {
   appId: "1:973325762370:web:4fb97306806bbe6cc0d2db",
   measurementId: "G-1XQPKL3740"
 };
+
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
-
-// Admin email
+const provider = new GoogleAuthProvider();
 const ADMIN_EMAIL = "gulistankh20141@gmail.com";
-
-// IMGBB API Key
 const IMGBB_API_KEY = "d12c2e4a8650157b2b6b9fe85336ea43";
 
-// DOM elements
-const loginBtn = document.getElementById('loginBtn');
-const logoutBtn = document.getElementById('logoutBtn');
-const adminPanel = document.getElementById('adminPanel');
-const noticeEditor = document.getElementById('noticeEditor');
-const blocksList = document.getElementById('blocksList');
-const titleInput = document.getElementById('title');
-const shortDescInput = document.getElementById('shortDesc');
-const publishBtn = document.getElementById('publishBtn');
-const postsArea = document.getElementById('postsArea');
-const noticeText = document.getElementById('noticeText');
-const headlineText = document.getElementById('headlineText');
-const modalBg = document.getElementById('modalBg');
-const modalClose = document.getElementById('modalClose');
-const modalContent = document.getElementById('modalContent');
-const zoomModal = document.getElementById('zoomModal');
-const zoomImg = document.getElementById('zoomImg');
-const zoomClose = document.querySelector('.zoom-close');
-
-let editingId = null;
+// DOM Elements
+const loginBtn = document.getElementById("loginBtn");
+const logoutBtn = document.getElementById("logoutBtn");
+const editorArea = document.getElementById("editorArea");
+const postsArea = document.getElementById("postsArea");
+const blocksList = document.getElementById("blocksList");
+const aTitle = document.getElementById("aTitle");
+const modalBg = document.getElementById("modalBg");
+const modalClose = document.getElementById("modalClose");
+const modalContent = document.getElementById("modalContent");
+const zoomModal = document.getElementById("zoomModal");
+const zoomImg = document.getElementById("zoomImg");
 
 // Login / Logout
-loginBtn.addEventListener('click', ()=>signInWithPopup(auth,new GoogleAuthProvider()).catch(console.error));
-logoutBtn.addEventListener('click', ()=>signOut(auth));
+loginBtn.onclick = async()=>{ await signInWithPopup(auth,provider); }
+logoutBtn.onclick = ()=>signOut(auth);
 
-onAuthStateChanged(auth, user=>{
-  if(user && user.email === ADMIN_EMAIL){
-    adminPanel.style.display = 'block';
-    noticeEditor.style.display = 'block';
-    loginBtn.style.display = 'none';
-    logoutBtn.style.display = 'inline-block';
+// Auth state
+onAuthStateChanged(auth,user=>{
+  if(user && user.email===ADMIN_EMAIL){
+    editorArea.classList.remove("hidden");
+    loginBtn.classList.add("hidden");
+    logoutBtn.classList.remove("hidden");
   } else {
-    adminPanel.style.display = 'none';
-    noticeEditor.style.display = 'none';
-    loginBtn.style.display = 'inline-block';
-    logoutBtn.style.display = 'none';
+    editorArea.classList.add("hidden");
+    loginBtn.classList.remove("hidden");
+    logoutBtn.classList.add("hidden");
   }
 });
 
-// IMGBB Upload function
+// IMGBB Upload
 async function uploadToImgBB(file){
   const formData = new FormData();
   formData.append("image", file);
-  const res = await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`,{method:"POST",body:formData});
+  const res = await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`, {method:"POST", body:formData});
   const data = await res.json();
   return data.data.url;
 }
 
-// Add Text / Image Blocks
-document.getElementById('addTextBtn')?.addEventListener('click', ()=>{
-  const t = document.createElement('textarea');
-  t.placeholder = "Write paragraph...";
-  t.dataset.type = "text";
-  t.className = "border p-2 w-full mb-2 rounded";
-  blocksList.appendChild(t);
-});
-document.getElementById('addImageBtn')?.addEventListener('click', ()=>{
-  if(blocksList.querySelectorAll('input[type="file"]').length >=5){alert("Max 5 images allowed"); return;}
-  const inp = document.createElement('input');
-  inp.type="file"; inp.dataset.type="image"; inp.className="w-full mb-2";
-  blocksList.appendChild(inp);
-});
+// Add Text/Image
+document.getElementById("addTextBtn").onclick = ()=>{
+  const t = document.createElement("textarea"); t.placeholder="Write paragraph..."; t.dataset.type="text"; t.className="border p-2 w-full mb-2 rounded"; blocksList.appendChild(t);
+}
+document.getElementById("addImageBtn").onclick = ()=>{
+  if(blocksList.querySelectorAll('input[type="file"]').length>=5){alert("Max 5 images allowed"); return;}
+  const inp = document.createElement("input"); inp.type="file"; inp.dataset.type="image"; inp.className="w-full mb-2"; blocksList.appendChild(inp);
+}
 
-// Publish Post
-publishBtn.addEventListener('click', async()=>{
-  const title = titleInput.value.trim();
-  const shortDesc = shortDescInput.value.trim();
+// Publish
+document.getElementById("publishBtn").onclick = async()=>{
+  const title = aTitle.value.trim();
   if(!title) return alert("Enter title!");
   const blocks = [];
   for(const el of blocksList.children){
     if(el.dataset.type=="text" && el.value.trim()) blocks.push({type:"text",text:el.value.trim()});
-    else if(el.type=="file" && el.files[0]){
+    else if(el.type=="file" && el.files.length>0){
       const url = await uploadToImgBB(el.files[0]);
       if(url) blocks.push({type:"image",url});
     }
   }
-  if(blocks.length==0) return alert("Add content!");
-  if(editingId){
-    await updateDoc(doc(db,"crimes",editingId),{title,shortDesc,blocks,createdAt:new Date()});
-    editingId=null;
-  } else {
-    await addDoc(collection(db,"crimes"),{title,shortDesc,blocks,createdAt:new Date()});
-  }
-  titleInput.value = shortDescInput.value = ""; blocksList.innerHTML = "";
-});
+  if(blocks.length===0) return alert("Add content!");
+  await addDoc(collection(db,"crimes"),{title,blocks,createdAt:new Date()});
+  aTitle.value = ""; blocksList.innerHTML = "";
+}
 
-// Admin Notice
-const noticeRef = doc(db,"settings","notice");
-document.getElementById('saveNoticeBtn')?.addEventListener('click',()=>setDoc(noticeRef,{text:document.getElementById('noticeInput').value.trim()}));
-
-// Load Posts & Notice
+// Load Posts
 onSnapshot(query(collection(db,"crimes"),orderBy("createdAt","desc")),snap=>{
   postsArea.innerHTML = "";
-  const posts = snap.docs.map(d=>({id:d.id,...d.data()}));
-  posts.forEach(d=>{
+  snap.docs.forEach(doc=>{
+    const d = doc.data();
     const img = d.blocks.find(b=>b.type=="image")?.url||"https://via.placeholder.com/300x150?text=No+Image";
     const txt = d.blocks.find(b=>b.type=="text")?.text.substring(0,80)+"..."||"";
-    const card = document.createElement('div');
-    card.className="card bg-white p-2 rounded shadow cursor-pointer";
-    card.innerHTML = `<img src="${img}" class="w-full h-40 object-cover mb-2 image-zoom"><h3 class="font-bold">${d.title}</h3><p>${txt}</p>`;
-    card.onclick=()=>showModal(d);
+    const card = document.createElement("div");
+    card.className="card";
+    card.innerHTML = `<img src="${img}" class="image-zoom"><div class="card-body"><h3>${d.title}</h3><p>${txt}</p></div>`;
+    card.onclick = ()=> showModal(d);
     postsArea.appendChild(card);
   });
-  headlineText.textContent = posts.slice(0,5).map(p=>p.title).join(" — ");
 });
 
-onSnapshot(noticeRef,snap=>{noticeText.textContent = snap.exists()?snap.data().text:"";});
-
-// Modal functions
+// Modal
 modalClose.onclick = ()=> modalBg.style.display="none";
 modalBg.onclick = e=>{if(e.target===modalBg) modalBg.style.display="none";}
-zoomClose.onclick = ()=> zoomModal.style.display="none";
+zoomModal.querySelector(".zoom-close").onclick = ()=> zoomModal.style.display="none";
 zoomModal.onclick = e=>{if(e.target===zoomModal) zoomModal.style.display="none";}
 
 function showModal(d){
   modalContent.innerHTML = `<h2 class='font-bold text-lg mb-2'>${d.title}</h2>`;
   d.blocks.forEach(b=>{
-    if(b.type=="text") modalContent.innerHTML += `<p class="mb-2">${b.text}</p>`;
-    else modalContent.innerHTML += `<img src="${b.url}" class="w-full mb-2 image-zoom">`;
+    if(b.type=="text") modalContent.innerHTML += `<p class='mb-2'>${b.text}</p>`;
+    else modalContent.innerHTML += `<img src='${b.url}' class='w-full mb-2 image-zoom'>`;
   });
   modalBg.style.display="flex";
   modalContent.querySelectorAll("img.image-zoom").forEach(img=>{
