--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     const newsForm = document.getElementById("newsForm");
     const newsContainer = document.getElementById("newsContainer");
 
-    const ADMIN_EMAIL = "aapkaemail@gmail.com"; // ⚠️ यहाँ अपना Gmail डालें
+    const ADMIN_EMAIL = "gulistankh2011@gmail.com"; // ⚠️ यहाँ अपना Gmail डालें
 
     // 🔹 Login
     loginBtn.addEventListener("click", async () => {
