--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
-const ADMIN_EMAIL="gulistankh2011@gmail.com"; // Admin email
-const IMGBB_API_KEY="2387b6e1ec3474b6df29aaa462344077"; // IMGBB API key
+const ADMIN_EMAIL="gulistankh2011@gmail.com";
+const IMGBB_API_KEY="2387b6e1ec3474b6df29aaa462344077";
 
 // DOM elements
 const loginBtn=document.getElementById("loginBtn");
@@ -183,7 +183,14 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
 .headline-ticker{background:#1e40af;padding:6px;top:88px;}
 .ticker-text{display:inline-block;padding-right:50px;animation:scroll 20s linear infinite;}
 @keyframes scroll{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
-.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:116px;}
+
+.posts-grid{display:grid;gap:12px;padding:8px;margin-top:116px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+@media(min-width:1024px){ /* PC/Large screens */
+  .posts-grid{grid-template-columns: repeat(4, 1fr);}
+}
+
 .card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
 .card:hover{transform:scale(1.02);}
 .card img{width:100%;height:150px;object-fit:cover;cursor:zoom-in;transition:transform 0.3s;}
@@ -245,5 +252,3 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
   <button class="zoom-close">X</button>
   <img id="zoomImg">
 </div>
-
-</html>
