--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
 
 
     
-    <img src="https://i.postimg.cc/vTb8F94w/vasalive-png.jpg" alt="Logo">
+    <img src="https:https://www.hindustantimes.com/ht-img/img/2025/10/26/550x309/INDIA-WEATHER-RAIN-0_1761443254753_1761443264938.jpg" alt="Logo">
 
 
     
