--- a/index.html
+++ b/index.html
@@ -285,5 +285,61 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
 <div id="zoomModal" class="zoom-modal">
   <button class="zoom-close">X</button>
   <img id="zoomImg">
+
+
+<!-- 🔹 Bottom Fixed Bar -->
+<footer class="bottom-bar">
+  <button onclick="location.href='#about'">About</button>
+  <button onclick="location.href='#contact'">Contact</button>
+  <button onclick="location.href='#privacy'">Privacy</button>
+</footer>
+
+<style>
+  .bottom-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(90deg, #1e3a8a, #2563eb);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px 0;
+    box-shadow: 0 -4px 10px rgba(0,0,0,0.2);
+    z-index: 500;
+  }
+
+  .bottom-bar button {
+    background: white;
+    color: #1e3a8a;
+    font-weight: bold;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 18px;
+    cursor: pointer;
+    box-shadow: 0 4px 0 rgba(0,0,0,0.15);
+    transition: all 0.2s ease;
+  }
+
+  .bottom-bar button:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 8px 12px rgba(0,0,0,0.25);
+  }
+
+  .bottom-bar button:active {
+    transform: translateY(0);
+    box-shadow: 0 4px 0 rgba(0,0,0,0.15);
+  }
+
+  @media (max-width: 600px) {
+    .bottom-bar button {
+      padding: 8px 12px;
+      font-size: 14px;
+    }
+  }
+</style>
+
+
+
 </div>
 </html>
