--- a/index.html
+++ b/index.html
@@ -261,31 +261,16 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-  
-<section class="posts-grid" id="postsArea"></section>
-
-<div id="modalBg" class="modal-bg">
-  <div class="modal">
-    <button id="modalClose" class="modal-close">X</button>
-    <div id="modalContent"></div>
-  </div>
 </div>
+
+
+
+
 
 <div id="zoomModal" class="zoom-modal">
   <button class="zoom-close">X</button>
   <img id="zoomImg">
-
+</div>  <!-- ← Yeh close hone ke baad footer lagao -->
 
 <!-- 🔹 Bottom Fixed Bar -->
 <footer class="bottom-bar">
@@ -338,8 +323,6 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
     }
   }
 </style>
-
-
-
-</div>
+  
+  
 </html>
