--- a/index.html
+++ b/index.html
@@ -272,38 +272,45 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
   left: 0;
   width: 100%;
   display: flex;
-  justify-content: space-around; /* buttons evenly spread */
+  justify-content: space-around;
   align-items: center;
-  gap: 10px;
-  padding: 10px 6px;
+  gap: 8px;
+  padding: 6px 6px; /* lower height */
   background: linear-gradient(90deg, #1e3a8a, #2563eb);
-  box-shadow: 0 -6px 20px rgba(0,0,0,0.18);
+  box-shadow: 0 -4px 12px rgba(0,0,0,0.25); /* subtle 3D effect */
   z-index: 100000;
 }
 
 .bottom-bar button {
-  flex: 1; /* equally fill space */
-  margin: 0 5px;
+  flex: 1;
+  margin: 0 4px;
   background: #ffffff;
   color: #1e3a8a;
   font-weight: 700;
   border: none;
-  border-radius: 10px;
-  padding: 10px 0;
+  border-radius: 8px;
+  padding: 6px 0; /* smaller button */
   cursor: pointer;
+  box-shadow: 0 4px 0 rgba(0,0,0,0.15); /* 3D base */
   transition: transform 0.2s, box-shadow 0.2s;
 }
 
 .bottom-bar button:hover {
   transform: translateY(-2px);
-  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+  box-shadow: 0 6px 6px rgba(0,0,0,0.2); /* lifted on hover */
 }
 
-@media (max-width:200px){
-  .bottom-bar { padding: 8px 4px; }
-  .bottom-bar button { font-size: 14px; padding: 8px 0; }
+.bottom-bar button:active {
+  transform: translateY(0);
+  box-shadow: 0 4px 0 rgba(0,0,0,0.15); /* press effect */
+}
+
+@media (max-width:600px){
+  .bottom-bar { padding: 5px 4px; }
+  .bottom-bar button { font-size: 13px; padding: 5px 0; }
 }
 </style>
+
 
 
 </html>
